# wispers-client

./: .gitignore  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
docs/: HOW_IT_WORKS.md  HOW_TO_USE.md  INTERNALS.md
examples/c/: Makefile  ffi_demo.c
examples/go/: Makefile  main.go  wconnect-go
examples/kotlin/: build.gradle.kts  settings.gradle.kts
examples/kotlin/app/src/main/: AndroidManifest.xml
examples/python/: ping.py  run.sh
examples/python/node-a/: registration  root_key
examples/python/node-b/: registration  root_key
proto/: daemon.proto  hub.proto  roster.proto
src/: lib.rs
wcadm/: Cargo.toml
wcadm/src/: main.rs
wconnect/: TODO.md
wconnect/src/: daemon.rs  main.rs  proxy_common.rs  proxy_http.rs  proxy_socks.rs  serving.rs
wispers-connect/: Cargo.toml  build.rs
wispers-connect/examples/: Makefile  ffi_demo  ffi_demo.c  ffi_test.c
wispers-connect/include/: wispers_connect.h
wispers-connect/src/: crypto.rs  errors.rs  hub.rs  lib.rs  node.rs  p2p.rs  quic.rs  roster.rs  serving.rs  state.rs  types.rs
wispers-connect/src/ffi/: callbacks.rs  handles.rs  helpers.rs  manager.rs  mod.rs  node.rs  nodes.rs  p2p.rs  runtime.rs  serving.rs  types.rs
wispers-connect/src/storage/: file.rs  foreign.rs  in_memory.rs  mod.rs
wispers-connect/tests/: p2p_integration.rs
wispers-connect/tests/c_ffi/: Makefile
wrappers/go/: errors.go  node.go  quic.go  shims.go  wispers.go  wispers_helpers.h
wrappers/kotlin/: build.gradle.kts
wrappers/kotlin/src/main/kotlin/dev/wispers/connect/: WispersConnect.kt
wrappers/kotlin/src/main/kotlin/dev/wispers/connect/handles/: Handle.kt  Node.kt  QuicConnection.kt  QuicStream.kt  ServingSession.kt  Storage.kt  StorageHandle.kt  UdpConnection.kt
wrappers/kotlin/src/main/kotlin/dev/wispers/connect/internal/: CallbackBridge.kt  (+3 more)
wrappers/kotlin/src/test/kotlin/dev/wispers/connect/: TypesTest.kt
wrappers/python/: Makefile  pyproject.toml
wrappers/python/tests/: test_exceptions.py  test_storage.py
wrappers/python/wispers_connect/: __init__.py  _bridge.py  _ffi.py  _handle.py  _library.py  _structs.py  aio.py  exceptions.py  node.py  quic.py  serving.py  storage.py  types.py  udp.py
(+7 files in other folders)
