[package]
name = "wcadm"
version = "0.1.0"
edition = "2024"
description = "CLI tool for managing Wispers Connect domains"

[[bin]]
name = "wcadm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
