[package]
name = "wispers-connect"
version = "0.1.0"
edition = "2024"
description = "Client library for Wispers Connect"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bincode = "1.3"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
urlencoding = "2.1"
zeroize = "1.8"
