[package]
name = "wispers-connect"
version = "0.1.0"
edition = "2024"
description = "Client library for Wispers Connect"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bincode = "1.3"
dirs = "5"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
hkdf = "0.12"
hmac = "0.12"
http = "1"
num-bigint = "0.4"
prost = "0.13"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["tls-native-roots"] }
urlencoding = "2.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = "1.8"

[build-dependencies]
tonic-build = "0.12"
